test/asm/for-loop-variable.err
error: for-loop-variable.asm(12):
    'y' already defined as constant at for-loop-variable.asm(8)
Assembly aborted with 1 error!
