test/asm/for-loop-variable.asm
def x = 4
for x, x
  def x *= 2
  println x
endr
println x

def y equ 5
for y, y
  def y *= 3
  println y
endr
println y
